tests/baselines/reference/typeParameterConstraints1.errors.txt
==== tests/cases/compiler/typeParameterConstraints1.ts (22 errors) ====
    function foo1<T extends any>(test: T) { }
    function foo2<T extends number>(test: T) { }
    function foo3<T extends string>(test: T) { }
    function foo4<T extends Date>(test: T) { } // valid
    function foo5<T extends RegExp>(test: T) { } // valid
    function foo6<T extends hm>(test: T) { }
                            ~~
!!! error TS2095: Could not find symbol 'hm'.
    function foo7<T extends Object>(test: T) { } // valid
    function foo8<T extends "">(test: T) { }
                            ~~
!!! error TS1003: Identifier expected.
                                    ~
!!! error TS1005: ')' expected.
                                       ~
!!! error TS1005: ';' expected.
                                ~~~~
!!! error TS2095: Could not find symbol 'test'.
                                      ~
!!! error TS2095: Could not find symbol 'T'.
    function foo9<T extends 1 > (test: T) { }
                            ~
!!! error TS1003: Identifier expected.
                                     ~
!!! error TS1005: ')' expected.
                                        ~
!!! error TS1005: ';' expected.
                                 ~~~~
!!! error TS2095: Could not find symbol 'test'.
                                       ~
!!! error TS2095: Could not find symbol 'T'.
    function foo10<T extends (1)> (test: T) { }
                              ~
!!! error TS1008: Unexpected token; 'parameter' expected.
                               ~
!!! error TS1005: ';' expected.
                                ~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
                                            ~
!!! error TS1005: '=>' expected.
                                         ~
!!! error TS2095: Could not find symbol 'T'.
    function foo11<T extends null> (test: T) { }
                             ~~~~
!!! error TS1006: Identifier expected; 'null' is a keyword.
                                        ~
!!! error TS1005: ')' expected.
                                           ~
!!! error TS1005: ';' expected.
                                    ~~~~
!!! error TS2095: Could not find symbol 'test'.
                                          ~
!!! error TS2095: Could not find symbol 'T'.
    function foo12<T extends undefined>(test: T) { }
                             ~~~~~~~~~
!!! error TS2095: Could not find symbol 'undefined'.
    function foo13<T extends void>(test: T) { }